tests/baselines/reference/errorsOnImportedSymbol.errors.txt
tests/cases/compiler/errorsOnImportedSymbol_1.ts(2,13): error TS2692: Cannot find name 'Sammy'. A type exists with this name, but no value.
tests/cases/compiler/errorsOnImportedSymbol_1.ts(3,9): error TS2692: Cannot find name 'Sammy'. A type exists with this name, but no value.


==== tests/cases/compiler/errorsOnImportedSymbol_1.ts (2 errors) ====
    import Sammy = require("./errorsOnImportedSymbol_0");
    var x = new Sammy.Sammy();
                ~~~~~
!!! error TS2692: Cannot find name 'Sammy'. A type exists with this name, but no value.
    var y = Sammy.Sammy(); 
            ~~~~~
!!! error TS2692: Cannot find name 'Sammy'. A type exists with this name, but no value.
    
    
==== tests/cases/compiler/errorsOnImportedSymbol_0.ts (0 errors) ====
    
    interface Sammy {
        new (): any;
        (): number;
    }
    export = Sammy;
    